--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
+html, body {
+  height: 100vh;
+  height: 100dvh;
+}
+
 
 body {
   background-image: radial-gradient(circle, #230651, #1e064f, #19064c, #13064a, #0e0547, #070743, #02073f, #00073a, #000831, #000928, #00091e, #000713);
@@ -72,7 +77,7 @@ html {
 }
 @media (min-width:300px){
   .hero-btn{
-    width: 22rem;
+    width: 20rem;
   }
   
 }
